# rfc_project

./: README.rst  config.yaml  main.py  pyproject.toml
data/processed/: STULONG.csv  STULONG.featurelist.csv  STULONG.full - Copy.csv  STULONG.full.csv  STULONG.test1.csv  STULONG.test10.csv  STULONG.test2.csv  STULONG.test3.csv  STULONG.test4.csv  STULONG.test5.csv  STULONG.test6.csv  STULONG.test7.csv  STULONG.test8.csv  STULONG.test9.csv  STULONG.train1.csv  STULONG.train10.csv  STULONG.train2.csv  STULONG.train3.csv  STULONG.train4.csv  STULONG.train5.csv  STULONG.train6.csv  STULONG.train7.csv  STULONG.train8.csv  STULONG.train9.csv
data/processed/STULONG/: STULONG.RF1.txt  STULONG.RF10.txt  STULONG.RF2.txt  STULONG.RF3.txt  STULONG.RF4.txt  STULONG.RF5.txt  STULONG.RF6.txt  STULONG.RF7.txt  STULONG.RF8.txt  STULONG.RF9.txt
data/processed/forests/: STULONG.RF1.txt  STULONG.RF10.txt  STULONG.RF2.txt  STULONG.RF3.txt  STULONG.RF4.txt  STULONG.RF5.txt  STULONG.RF6.txt  STULONG.RF7.txt  STULONG.RF8.txt  STULONG.RF9.txt
data/raw/: STULONG.full.csv  STULONG.test1.csv  STULONG.test5.csv  STULONG.test8.csv  STULONG.train1.csv  STULONG.train10.csv  STULONG.train3.csv  STULONG.train4.csv  STULONG.train7.csv  STULONG.train9.csv
data/raw/OneHot/: STULONG.test1.csv  STULONG.test10.csv  STULONG.test2.csv  STULONG.test3.csv  STULONG.test4.csv  STULONG.test5.csv  STULONG.test6.csv  STULONG.test7.csv  STULONG.test8.csv  STULONG.test9.csv  (+10 more)
scripts/: cardio-train.py  sample.py
src/: PCA.py  processing.py  random_forest_classifier.py
tests/: test_rfc_segmentacao.py
(+14 files in other folders)
